<resources>
    <string name="app_name">Crappy Bird</string>

    <string name="edit_username">Username</string>
    <string name="edit_password">Password</string>
    <string name="button_login">Login</string>

    <string name="banner_ad_unit_id">ca-app-pub-5853705328985816/5080518683</string>
    <string name="test_banner_ad_unit_id">ca-app-pub-3940256099942544/6300978111</string>

    <string name="facebook_app_id">367224960139464</string>
    <string name="edit_email">Email</string>
    <string name="edit_password2">Password again</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_recover">Recover Password</string>
    <string name="button_forgot">Forgot Password</string>
</resources>
